--- a/src/Busybee/HomeBundle/Resources/views/Default/flash.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/flash.html.twig
@@ -10,40 +10,32 @@
     {% set flashClass = "" %}
 {% endif %}
 
-{% set theMessage = '' %}
-
 {% for flashMessage in app.session.flashbag.get('error') %}
-<div class="alert alert-danger{{ flashClass }}" role="alert">
-    {% set theMessage = flashMessage %}
+    <div class="alert alert-danger{{ flashClass }}" role="alert">
+        {% include 'BusybeeHomeBundle:Default:flashSplit.html.twig' with {'theMessage': flashMessage} %}
+    </div>
 {% endfor %}
 
 {% for flashMessage in app.session.flashbag.get('danger') %}
     <div class="alert alert-danger{{ flashClass }}" role="alert">
-        {% set theMessage = flashMessage %}
+        {% include 'BusybeeHomeBundle:Default:flashSplit.html.twig' with {'theMessage': flashMessage} %}
+    </div>
 {% endfor %}
 
 {% for flashMessage in app.session.flashbag.get('warning') %}
-        <div class="alert alert-warning{{ flashClass }}" role="alert">
-            {% set theMessage = flashMessage %}
+    <div class="alert alert-warning{{ flashClass }}" role="alert">
+        {% include 'BusybeeHomeBundle:Default:flashSplit.html.twig' with {'theMessage': flashMessage} %}
+    </div>
 {% endfor %}
 
 {% for flashMessage in app.session.flashbag.get('info') %}
-            <div class="alert alert-info{{ flashClass }}" role="alert">
-                {% set theMessage = flashMessage %}
+    <div class="alert alert-info{{ flashClass }}" role="alert">
+        {% include 'BusybeeHomeBundle:Default:flashSplit.html.twig' with {'theMessage': flashMessage} %}
+    </div>
 {% endfor %}
 
-                {% for flashMessage in app.session.flashbag.get('success') %}
-                <div class="alert alert-success{{ flashClass }}" role="alert">
-                    {% set theMessage = flashMessage %}
+{% for flashMessage in app.session.flashbag.get('success') %}
+    <div class="alert alert-success{{ flashClass }}" role="alert">
+        {% include 'BusybeeHomeBundle:Default:flashSplit.html.twig' with {'theMessage': flashMessage} %}
+    </div>
 {% endfor %}
-
-                    {% if theMessage is not empty %}
-                    {% if theMessage is iterable %}
-                        {% for message,parameters in theMessage %}
-                            {{ message|trans(parameters) }}
-                        {% endfor %}
-                    {% else %}
-                        {{ theMessage|trans }}
-                    {% endif %}
-                </div>
-                {% endif %}
