--- a/src/Busybee/SystemBundle/Resources/views/Setting/edit.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Setting/edit.html.twig
@@ -1,7 +1,7 @@
 {# src/Busybee/SystemBundle/Resources/views/Setting/edit.html.twig #}
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
-{% trans_default_domain 'BusybeeSystemBundle' %}
+{% trans_default_domain 'SystemBundle' %}
 
 {% block title %}Busybee - {{ 'system.setting.edit.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'system.setting.edit.title'|trans }}{% endblock headerTitle %}
