--- a/src/Busybee/SystemBundle/Resources/views/Update/index.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Update/index.html.twig
@@ -1,7 +1,7 @@
 {# src/General/SystemBundle/Resources/views/Update/index.html.twig #}
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
-{% trans_default_domain 'BusybeeSystemBundle' %}
+{% trans_default_domain 'SystemBundle' %}
 
 
 {% block title %}Busybee - {{ 'system.update.title'|trans }}{% endblock title %}
