--- a/src/Busybee/SystemBundle/Resources/views/Setting/upload.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Setting/upload.html.twig
@@ -1,24 +1,30 @@
 {# src/General/SystemBundle/Resources/views/Setting/upload.html.twig #}
 {% extends "BusybeeHomeBundle:Default:template.html.twig" %}
 
-{% trans_default_domain 'BusybeeSystemBundle' %}
+{% trans_default_domain 'SystemBundle' %}
 
 
 {% block title %}Busybee - {{ 'system.upload.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'system.upload.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'system.upload.description'|trans }}{% endblock headerLead %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% include '@BusybeeHome/Toggle/style.html.twig' %}
+{% endblock %}
+
 {% block contentContainer %}
     {% block flashMessages %}{% endblock %}
 	{{ form_start(form) }}
     {% set header = 'system.upload.title' %}
-    {% set transDomain = 'BusybeeSystemBundle' %}
+    {% set transDomain = 'SystemBundle' %}
     {% set h3Content = uploadButton() %}
     {% include '@BusybeeHome/Page/panelStart.html.twig' %}
 	<div class="container-fluid">
+        {% include '@BusybeeHome/Default/flash.html.twig' with {'flashClass': 'fadeAlert', 'transDomain': 'SystemBundle'} %}
 		<div class="row">
-			<div class="col-sm-6">
-                {% include '@BusybeeHome/Default/flash.html.twig' with {'flashClass': 'fadeAlert'} %}
+			<div class="col-sm-6 well">
+                {{ form_row(form.default) }}
 			</div>
 			<div class="col-sm-6 well">
                 {{ form_row(form.file) }}
@@ -32,6 +38,7 @@
 {% block javascripts %}
     {{ parent() }}
     {% include '@BusybeeHome/Scripts/fadeAlert.js.twig' %}
+    {% include '@BusybeeHome/Toggle/script.html.twig' %}
 {% endblock %}
 
 
