--- a/src/Busybee/SystemBundle/Resources/views/Update/index_content.html.twig
+++ b/src/Busybee/SystemBundle/Resources/views/Update/index_content.html.twig
@@ -1,12 +1,14 @@
 {# src/General/SystemBundle/Resources/views/Update/index_content.html.twig #}
 
-{% trans_default_domain 'BusybeeSystemBundle' %}
+{% trans_default_domain 'SystemBundle' %}
 
+{% include '@BusybeeHome/Page/panelStart.html.twig' with {'transDomain': 'SystemBundle', 'header': 'system.version.system.title', 'name': config.version.current['system']} %}
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-6">
 			<div class="panel panel-{% if config.version.shouldBe['system'] == config.version.current['system'] %}success{% else %}warning{% endif %}">
 				<div class="panel-heading">
-					<h3 class="panel-title">{{ 'system.version.system.title'|trans ({'%version%': config.version.current['system']}) }}</h3>
+					<h3 class="panel-title">{{ 'system.version.system.title'|trans ({'%name%': config.version.current['system']}) }}</h3>
 				</div>
 				<div class="panel-body">
 					<p>{{ 'system.version.system.description'|trans ({'%version%': config.version.shouldBe['system']}) }}</p>
@@ -24,28 +26,33 @@
 			</div>
 		</div>
 		<div class="col-sm-12">
-			{% if config.dbUpdate > 0 %}
-			<div class="panel panel-warning">
-				<div class="panel-heading">
-					<h3 class="panel-title">{{ 'system.update.database.title'|trans }}</h3>
+            {% if config.dbUpdate > 0 %}
+				<div class="panel panel-warning">
+					<div class="panel-heading">
+						<h3 class="panel-title">{{ 'system.update.database.title'|trans }}</h3>
+					</div>
+					<div class="panel-body">
+						<p>
+							<button class="btn btn-warning" id="ajaxLoad" style="float: right"><span
+										class="glyphicons glyphicons-roundabout"></span>Update
+							</button>
+                            {% transchoice config.dbUpdate with  {'%count%': config.dbUpdate} %}
+							system.update.database.required
+                            {% endtranschoice %}</p>
+						<p>{{ 'system.update.database.warning'|trans }}</p>
+					</div>
 				</div>
-				<div class="panel-body">
-					<p><button class="btn btn-warning" id="ajaxLoad" style="float: right"><span class="glyphicons glyphicons-roundabout"></span>Update</button>
-					{% transchoice config.dbUpdate with  {'%count%': config.dbUpdate} %}
-						system.update.database.required
-					{% endtranschoice %}</p>
-					<p>{{ 'system.update.database.warning'|trans }}</p>
+            {% else %}
+				<div class="panel panel-success">
+					<div class="panel-heading">
+						<h3 class="panel-title">{{ 'system.update.database.title'|trans }}</h3>
+					</div>
+					<div class="panel-body">
+                        {{ 'system.update.database.notRequired'|trans }}
+					</div>
 				</div>
-			</div>
-			{% else %}
-			<div class="panel panel-success">
-				<div class="panel-heading">
-					<h3 class="panel-title">{{ 'system.update.database.title'|trans }}</h3>
-				</div>
-				<div class="panel-body">
-					{{ 'system.update.database.notRequired'|trans }}
-				</div>
-			</div>
-			{% endif %}
+            {% endif %}
 		</div>
 	</div>
+</div>
+{% include '@BusybeeHome/Page/panelEnd.html.twig' %}
